# solana-dex

./: .gitignore  README.md
backend/: README.md
backend/agg/: Anchor.toml  package-lock.json  package.json
backend/agg/programs/aggregator/: Cargo.toml
backend/agg/programs/aggregator/src/: lib.rs
backend/agg/tests/: aggregator.ts
frontend/: README.md  package-lock.json  package.json
frontend/config/: webpack.config.js
frontend/public/: index.html
frontend/src/: App.css  App.jsx  Modal.jsx  SwapBox.css  SwapBox.jsx  TokenDropdown.css  TokenDropdown.jsx  TokenDropdown.module.css  TokenSet.css  TokenSet.jsx  index.css  index.js  main.jsx
frontend/src/utils/: hooks.js
node/: .env_temp  .gitignore  README copy.md  README.md  package.json
node/src/: aggregator.json  create_wallet_json.ts  get_sol_balance.ts  server.ts
node/src/routes/: swap-orca.ts  swap.ts
