[package]
name = "aggregator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aggregator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-gen = "0.3.1"
anchor-lang = "0.27.0"
whirlpool = { path = "../../../whirlpools-main/programs/whirlpool", features = ["cpi"]}

